# surveillance-ai

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: alert_manager.py  detector.py  face_recognizer.py  main.py
backend/data/criminal_db/: ds_model_facenet_detector_opencv_aligned_normalization_base_expand_0.pkl
frontend/: app.js  index.html  style.css
scripts/: prepare_dataset.py
